# bgp

./: README.md
src/bgp/bgp_calib/: CMakeLists.txt  README.md  package.xml
src/bgp/bgp_calib/config/: calib.yaml  cameras_intrinsic_calib.yaml  grasshoppers.yaml  tag_poses.yaml
src/bgp/bgp_calib/data/: tag_poses.yaml  tag_poses_full.yaml
src/bgp/bgp_calib/include/bgp_calib/: calib_node.h  calib_tool.h  camera.h  tag.h  utils.h
src/bgp/bgp_calib/launch/: apriltag_detector_node.launch  camera.launch  extrinsic_calibration.launch  tag_positions.launch  test.launch
src/bgp/bgp_calib/matlab/: README.md  get_points_3d.m  make_tags.m  plot_reprojection_data.m  visualize_cameras.m  visualize_coordinate_system.m  visualize_tags.m  write_masks.m  write_tags.m
src/bgp/bgp_calib/src/: CalibNode.cpp  CalibTool.cpp  Camera.cpp  Tag.cpp  bgp_calib_node.cpp  utils.cpp
src/bgp/bgp_calib/test/: test.bag
src/bgp/bgp_launch/: CMakeLists.txt  package.xml
src/bgp/bgp_launch/launch/: bird_ext_calib.launch
