<?xml version="1.0"?>
<package format="2">
  <name>bgp_calib</name>
  <version>0.0.1</version>
  <description>package for extrinsic camera calibration</description>

  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  
  <depend>roscpp</depend>
  <depend>apriltag_ros</depend>
  <depend>apriltag_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>standard_msgs</depend>
  <depend>eigen</depend>
  
  <export>
  </export>
  <exec_depend>message_runtime</exec_depend>
</package>
