<?xml version="1.0"?>
<package format="2">
  <name>bgp_launch</name>
  <version>0.0.0</version>
  <description>package for launch bgp code</description>

  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>

  <license>Apache-2.0</license>
  <depend>apriltag_ros</depend>
  <export>
  </export>
</package>
